# slaves_owner

./: Cargo.toml  justfile  slaves_owner_client.service  slaves_owner_server.service
src/: client.rs  lib.rs  server.rs
