[package]
name = "slaves_owner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
dotenvy = "0.15.7"
nokhwa = "0.10.4"
pwhash = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
upt = "0.7.0"

[[bin]]
name = "slaves_owner_server"
path = "src/server.rs"

[[bin]]
name = "slaves_owner_client"
path = "src/client.rs"

